---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2022-01-##
  Bugfixes:
    - Fixed an error the facility was calling for ingredients which were not available
    - Fixed an graphical issue where the production science recipes were not done correctly
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2021-12-20
  Bugfixes:
    - Fixed an error where the mod was looking for angels without angels installed
---------------------------------------------------------------------------------------------------
Version: 1.0.29
Date: 2021-12-19
  Changes:
    - BE WARNED WILL BREAK EXISTING SAVES
    - Changed pack recipe names to be more consistent
    - Updated icons script to be more dynamic
    - looked at rebalancing recipes based on configuration
    - added more options for most packs
    - currently does not work with extended burner phase systems (still work in progress)
---------------------------------------------------------------------------------------------------
Version: 1.0.28
Date: 2021-05-27
  Bugfixes:
    - Allow manganese plate to be crafted as it is used in one of the packs
---------------------------------------------------------------------------------------------------
Version: 1.0.27
Date: 2020-11-24
  Changes:
    - Version bumped for 1.1
---------------------------------------------------------------------------------------------------
Version: 1.0.26
Date: 2020-08-16
  Bugfixes:
    - Patched an edge case with angels tech overhaul tweaks triggering incorrectly
---------------------------------------------------------------------------------------------------
Version: 1.0.25
Date: 2020-08-09
  Bugfixes:
    - Patched that omni moved an icon to a different location, breaking compatibility
---------------------------------------------------------------------------------------------------
Version: 1.0.24